PLCParser.py
# Generated from PLC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PLCParser ( Parser ):

    grammarFileName = "PLC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'if'", "'else'", "'while'", 
                     "'for'", "'read'", "'write'", "<INVALID>", "<INVALID>", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'", "'&&'", 
                     "'||'", "'!'", "'=='", "'!='", "'<'", "'>'", "';'", 
                     "','", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "BOOL", "STRING", "TYPE", 
                      "IF", "ELSE", "WHILE", "FOR", "READ", "WRITE", "COMMENT", 
                      "WS", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "MOD", 
                      "DOT", "AND", "OR", "NOT", "EQ", "NEQ", "LT", "GT", 
                      "SEMI", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "ID" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_declaration = 2
    RULE_expressionStatement = 3
    RULE_readStatement = 4
    RULE_writeStatement = 5
    RULE_block = 6
    RULE_ifStatement = 7
    RULE_whileStatement = 8
    RULE_forStatement = 9
    RULE_expression = 10
    RULE_assignment = 11
    RULE_logic_or = 12
    RULE_logic_and = 13
    RULE_equality = 14
    RULE_comparison = 15
    RULE_addition = 16
    RULE_multiplication = 17
    RULE_unary = 18
    RULE_primary = 19

    ruleNames =  [ "program", "statement", "declaration", "expressionStatement", 
                   "readStatement", "writeStatement", "block", "ifStatement", 
                   "whileStatement", "forStatement", "expression", "assignment", 
                   "logic_or", "logic_and", "equality", "comparison", "addition", 
                   "multiplication", "unary", "primary" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    BOOL=3
    STRING=4
    TYPE=5
    IF=6
    ELSE=7
    WHILE=8
    FOR=9
    READ=10
    WRITE=11
    COMMENT=12
    WS=13
    ASSIGN=14
    PLUS=15
    MINUS=16
    MUL=17
    DIV=18
    MOD=19
    DOT=20
    AND=21
    OR=22
    NOT=23
    EQ=24
    NEQ=25
    LT=26
    GT=27
    SEMI=28
    COMMA=29
    LPAREN=30
    RPAREN=31
    LBRACE=32
    RBRACE=33
    ID=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLCParser.StatementContext)
            else:
                return self.getTypedRuleContext(PLCParser.StatementContext,i)


        def getRuleIndex(self):
            return PLCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PLCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 22825471870) != 0):
                self.state = 40
                self.statement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(PLCParser.DeclarationContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(PLCParser.ExpressionStatementContext,0)


        def readStatement(self):
            return self.getTypedRuleContext(PLCParser.ReadStatementContext,0)


        def writeStatement(self):
            return self.getTypedRuleContext(PLCParser.WriteStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(PLCParser.BlockContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(PLCParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(PLCParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(PLCParser.ForStatementContext,0)


        def SEMI(self):
            return self.getToken(PLCParser.SEMI, 0)

        def getRuleIndex(self):
            return PLCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PLCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.declaration()
                pass
            elif token in [1, 2, 3, 4, 16, 23, 30, 34]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.expressionStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.readStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.writeStatement()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.block()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.ifStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.whileStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 8)
                self.state = 53
                self.forStatement()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 9)
                self.state = 54
                self.match(PLCParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(PLCParser.TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.ID)
            else:
                return self.getToken(PLCParser.ID, i)

        def SEMI(self):
            return self.getToken(PLCParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.COMMA)
            else:
                return self.getToken(PLCParser.COMMA, i)

        def getRuleIndex(self):
            return PLCParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = PLCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(PLCParser.TYPE)
            self.state = 58
            self.match(PLCParser.ID)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 59
                self.match(PLCParser.COMMA)
                self.state = 60
                self.match(PLCParser.ID)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(PLCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PLCParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(PLCParser.SEMI, 0)

        def getRuleIndex(self):
            return PLCParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = PLCParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.expression()
            self.state = 69
            self.match(PLCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(PLCParser.READ, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.ID)
            else:
                return self.getToken(PLCParser.ID, i)

        def SEMI(self):
            return self.getToken(PLCParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.COMMA)
            else:
                return self.getToken(PLCParser.COMMA, i)

        def getRuleIndex(self):
            return PLCParser.RULE_readStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStatement" ):
                listener.enterReadStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStatement" ):
                listener.exitReadStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStatement" ):
                return visitor.visitReadStatement(self)
            else:
                return visitor.visitChildren(self)




    def readStatement(self):

        localctx = PLCParser.ReadStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_readStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(PLCParser.READ)
            self.state = 72
            self.match(PLCParser.ID)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 73
                self.match(PLCParser.COMMA)
                self.state = 74
                self.match(PLCParser.ID)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(PLCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(PLCParser.WRITE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PLCParser.ExpressionContext,i)


        def SEMI(self):
            return self.getToken(PLCParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.COMMA)
            else:
                return self.getToken(PLCParser.COMMA, i)

        def getRuleIndex(self):
            return PLCParser.RULE_writeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteStatement" ):
                listener.enterWriteStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteStatement" ):
                listener.exitWriteStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStatement" ):
                return visitor.visitWriteStatement(self)
            else:
                return visitor.visitChildren(self)




    def writeStatement(self):

        localctx = PLCParser.WriteStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_writeStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PLCParser.WRITE)
            self.state = 83
            self.expression()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 84
                self.match(PLCParser.COMMA)
                self.state = 85
                self.expression()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(PLCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PLCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PLCParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLCParser.StatementContext)
            else:
                return self.getTypedRuleContext(PLCParser.StatementContext,i)


        def getRuleIndex(self):
            return PLCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PLCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(PLCParser.LBRACE)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 22825471870) != 0):
                self.state = 94
                self.statement()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(PLCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PLCParser.IF, 0)

        def LPAREN(self):
            return self.getToken(PLCParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(PLCParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(PLCParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLCParser.StatementContext)
            else:
                return self.getTypedRuleContext(PLCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(PLCParser.ELSE, 0)

        def getRuleIndex(self):
            return PLCParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = PLCParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(PLCParser.IF)
            self.state = 103
            self.match(PLCParser.LPAREN)
            self.state = 104
            self.expression()
            self.state = 105
            self.match(PLCParser.RPAREN)
            self.state = 106
            self.statement()
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(PLCParser.ELSE)
                self.state = 108
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PLCParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(PLCParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(PLCParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(PLCParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(PLCParser.StatementContext,0)


        def getRuleIndex(self):
            return PLCParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = PLCParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(PLCParser.WHILE)
            self.state = 112
            self.match(PLCParser.LPAREN)
            self.state = 113
            self.expression()
            self.state = 114
            self.match(PLCParser.RPAREN)
            self.state = 115
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PLCParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(PLCParser.LPAREN, 0)

        def TYPE(self):
            return self.getToken(PLCParser.TYPE, 0)

        def ID(self):
            return self.getToken(PLCParser.ID, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.SEMI)
            else:
                return self.getToken(PLCParser.SEMI, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PLCParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(PLCParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(PLCParser.StatementContext,0)


        def getRuleIndex(self):
            return PLCParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = PLCParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(PLCParser.FOR)
            self.state = 118
            self.match(PLCParser.LPAREN)
            self.state = 119
            self.match(PLCParser.TYPE)
            self.state = 120
            self.match(PLCParser.ID)
            self.state = 121
            self.match(PLCParser.SEMI)
            self.state = 122
            self.expression()
            self.state = 123
            self.match(PLCParser.SEMI)
            self.state = 124
            self.expression()
            self.state = 125
            self.match(PLCParser.RPAREN)
            self.state = 126
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PLCParser.AssignmentContext,0)


        def getRuleIndex(self):
            return PLCParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = PLCParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.assignment()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_or(self):
            return self.getTypedRuleContext(PLCParser.Logic_orContext,0)


        def ASSIGN(self):
            return self.getToken(PLCParser.ASSIGN, 0)

        def assignment(self):
            return self.getTypedRuleContext(PLCParser.AssignmentContext,0)


        def getRuleIndex(self):
            return PLCParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PLCParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.logic_or()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 131
                self.match(PLCParser.ASSIGN)
                self.state = 132
                self.assignment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_orContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_and(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLCParser.Logic_andContext)
            else:
                return self.getTypedRuleContext(PLCParser.Logic_andContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.OR)
            else:
                return self.getToken(PLCParser.OR, i)

        def getRuleIndex(self):
            return PLCParser.RULE_logic_or

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_or" ):
                listener.enterLogic_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_or" ):
                listener.exitLogic_or(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_or" ):
                return visitor.visitLogic_or(self)
            else:
                return visitor.visitChildren(self)




    def logic_or(self):

        localctx = PLCParser.Logic_orContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_logic_or)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.logic_and()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 136
                self.match(PLCParser.OR)
                self.state = 137
                self.logic_and()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_andContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLCParser.EqualityContext)
            else:
                return self.getTypedRuleContext(PLCParser.EqualityContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.AND)
            else:
                return self.getToken(PLCParser.AND, i)

        def getRuleIndex(self):
            return PLCParser.RULE_logic_and

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_and" ):
                listener.enterLogic_and(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_and" ):
                listener.exitLogic_and(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_and" ):
                return visitor.visitLogic_and(self)
            else:
                return visitor.visitChildren(self)




    def logic_and(self):

        localctx = PLCParser.Logic_andContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_logic_and)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.equality()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 144
                self.match(PLCParser.AND)
                self.state = 145
                self.equality()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLCParser.ComparisonContext)
            else:
                return self.getTypedRuleContext(PLCParser.ComparisonContext,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.EQ)
            else:
                return self.getToken(PLCParser.EQ, i)

        def NEQ(self, i:int=None):
            if i is None:
                return self.getTokens(PLCParser.NEQ)
            else:
                return self.getToken(PLCParser.NEQ, i)

        def getRuleIndex(self):
            return PLCParser.RULE_equality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquality" ):
                listener.enterEquality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquality" ):
                listener.exitEquality(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquality" ):
                return visitor.visitEquality(self)
            else:
                return visitor.visitChildren(self)




    def equality(self):
